# ApiLogicServer-src

./: .bashrc  .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  Readme.md  Webgenie.md  docker-compose.yml  install-ApiLogicServer-dev.ps1  install-ApiLogicServer-dev.sh  license.json  pyproject.mess.toml  pyproject.toml  requirements.txt  requirementsZ.txt  setup.py  test_psycopg_fix.py  tvf.txt
.claude/: settings.local.json
.github/: FUNDING.yml
api_logic_server_cli/: .env  airport.sqlite  api_logic_server.py  cli-internals.md  cli.py  cli_args_base.py  cli_args_project.py  dev-architecture.md  extended_builder.py  genai.py  genaiX.py  genaiZ.py  genai_logic_builder.py  genai_rules_from_response.py  genai_utils.py  logging.yml  manager.py  profile.html  profile.json
api_logic_server_cli/add_cust/: add_cust.py  add_cust_readme.md
api_logic_server_cli/clone_and_overlay_prototypes/: add_cust.py  create_readme.py  project_overlay.py  sample_mgr_readme.md
api_logic_server_cli/create_from_model/: api_expose_api_models_creator.py  api_logic_server_utils.py  create_db_from_model.py  dbml.py  meta_model.py  model_creation_services.py  multi_db_utilsZZ.txt  ont-buildZ.py  ont_build.py  ont_create.py  ont_createZ.py  ui_admin_creator.py  uri_info.py
api_logic_server_cli/database/: BudgetApp.sqlite  __init__.py  allocation.copilot  authentication.sqlite  authentication_doc_unused.sqlite  basic_demo.sqlite  basic_demo.txt  basic_demo_wg.sqlite  classicmodels.sqlite  customize_models.py  mcp.sqlite  model_using_numeric.py  new.sqlite  nw-gold-fix.sql  nw-gold-plus.sqlite  nw-gold.sqlite  nw.sqlite  sample-aiZZ.sqlite  sample_ai.txt  shipping.sqlite  table_filters_tests.sqlite  table_filters_tests.yml  table_filters_tests_nw.yml  table_filters_tests_nw_1.yml  table_filters_tests_typical.yml  todos.sqlite
api_logic_server_cli/fragments/: Todo_modelsZZ.py.py  Tutorial.md  configZZ.py  db_typesZZ.txt  declare_logic.py  declare_logic_begin.py  declare_logic_end.py  docker-compose.yml  mcp_admin.yml  modelsZZ.py  nw_virtual_attrs.py  ui_basic_web_app_runZZ.py
api_logic_server_cli/genai/: $genai_overview.md  client.py  genai.py  genai_admin_app copy.py  genai_admin_app.py  genai_fatal_excp.py  genai_graphics.md  genai_graphics.py  genai_logic_builder.py  genai_mcp.py  genai_react_app.py  genai_svcs.py  genai_svcs_cmts@430.py  genai_svcs_nl.py  genai_utils.py  json2rules.py  logic_bank_apiX.prompt
api_logic_server_cli/model_migrator/: gen_behave_tests.py  json_conversion.py  migrator.py  model_migrator_start.py  reposreader.py  resourceobj.py  role_security.py  rule.py  rule_obj.py  util.py
api_logic_server_cli/project_api_fiddle/: readme.md
api_logic_server_cli/project_prototype/: .gitignore  api_logic_server_run.py  config.py  default.env  logging.yml  readme.md  util.py
api_logic_server_cli/tools/: minify.sh  (+1 more)
dev_info/: $readme.txt
docker/: api_logic_server.Dockerfile  api_logic_server_all.Dockerfile  api_logic_server_all_inspect.txt  api_logic_server_all_x.Dockerfile  api_logic_server_arm.Dockerfile  api_logic_server_arm_x.Dockerfile  api_logic_server_x.Dockerfile  api_logic_server_y.Dockerfile  arm-slim.Dockerfile  arm-slim_x.Dockerfile  arm-slim_z.Dockerfile  build_web_genie.sh  install-odbc-max.Dockerfile  install-odbc.Dockerfile  run_webgenie.sh  webgenie.Dockerfile  webgenie.env
gen_ai/: logic_trainer.py
internal_dev/: $auto_auth.txt  $readme.txt  $server_focus.txt  EAI_pattern.md  OBX-glws-mini-readme.md  OBX-glws-video-script.md  OBX.md  WebG_with_Dev.txt  ai-app-generators.txt  app_model_editor.txt  bug-tastrophe.txt  ce-vs-skills-analysis.md  circular_config.txt  copilot_commands.txt  customs_demo_study.md  default_interp.md  launch_sql_server_env  migrate sqlite.txt  ont_exp_config_prop.txt  prompt_plus_integration.prompt  roadmap.txt  server_startup_test.py  v11 changes.txt  win_build_failure.txt
kafka/: $kafka-notes.txt  Three easy ways to run Kafka without Zookeeper | Hello Kube.webloc
nginx/: nginx.conf  site.conf  wg.conf
react-admin/: $Notes  install-react-admin
readme_dev/: $readme.txt  git_push_new_project.sh  venv_locations.txt
sra-build/: asset-manifest.json  index.html
tests/: db_debug.py  models-db-types.py  python_anywhere_api_logic_server_run.py  run_app.sh  run_app_sub_process.py  run_logger_test.py  tutorial_test.py  use-model.py
webgenai/: alsr.py  api_logic_server_run.py  arun.sh  grun.sh  readme.md  requirements.txt
(+3595 files in other folders)
