# use Run Config 0, or... (e.g., to test)
#
#    cd ApiLogicServer-src
#    delete the build & dist directories
#    $ python3 -m build
#
#    cd ApiLogicServer  # with venv
#    python3 -m pip install /Users/val/dev/ApiLogicServer/ApiLogicServer-dev/org_git/ApiLogicServer-src

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "api_logic_server_cli.api_logic_server.__version__"}

# this solves the dup-subdirs-at-root problem
# [tool.setuptools]
# package-dir = {"api_logic_server" = "api_logic_server"}
# packages=[find_packages()]
# packages=find_packages()

# https://stackoverflow.com/questions/75879256/pyproject-toml-package-flat-layout
[tool.setuptools.packages.find]
include = ["api_logic_server_cli*"]
# exclude = ["__pycache__"]
namespaces = true

[project]
dependencies = [
        "PyJWT==2.6.0",
        "python-dateutil==2.8.2",
        "SQLAlchemy-Utils==0.38.2",
        "logicbankutils==0.6.0",
        "inflect==5.0.2",
        "inflection==0.5.1",

        # from safrs, but stipulate version#s
        # e.g., omit CORS and the build fails
         "Flask==2.3.2",
         "Flask-Cors==3.0.10",
         "Flask-RESTful>=0.3.9",
         "flask-restful-swagger-2>=0.35",
         "Flask-SQLAlchemy==3.0.3",
         "flask-swagger-ui>=4.11.1",
         "flask_bcrypt==1.0.1",
         "itsdangerous==2.1.2",
         "Jinja2==3.1.5",
         "MarkupSafe==2.1.3",
        #  "pyodbc==4.0.34",
         "six==1.16.0",
         "SQLAlchemy==2.0.15",
         "Werkzeug==2.3.3", 
         # 2.3.3 caused Poetry to fail per safrs conflict (Werkzeug>=2.3.8), 2.3.8 fails to build
        "safrs>=3.1.7",
        "Flask-Admin==1.5.7",
        "Flask-JWT-Extended==4.4.4",
        "Flask-Login==0.6.2",
        "Flask-OpenID==1.3.0",
        "python-dotenv==0.15.0",
        "email-validator==1.1.1",
        "LogicBank>=1.20.26",
        # https://stackoverflow.com/questions/71354710/cryptography-package-is-required-for-sha256-password-or-caching-sha2-password
        # "PyMySQL==1.0.3[rsa]", 
        # "PyMySQL==1.0.3+rsa",
        "cryptography==36.0.1",
        "rsa",
        "PyMySQL==1.0.3", 
        "oracledb==2.1.2",
        "requests==2.31.0",
        "gunicorn==20.1.0",
        # "psycopg2-binary==2.9.5",
        "psycopg2-binary==2.9.9",
        "dotmap==1.3.25",
        "WTForms==2.3.3",
        "behave==1.2.6",
        "alembic==1.7.7",
        "python-ulid==2.7.0",
        "psutil==6.0.0",
        "pandas==2.2.2",
        "openpyxl==3.1.5",
        "GeoAlchemy2==0.12.5",
        "confluent-kafka==2.3.0",
        "translate==3.6.1",
        "libretranslatepy==2.1.1",
        "reportlab==4.2.0",
        "xlsxwriter==3.2.0",
        "natsort==8.4.0",
        "astor==0.8.1",
        # https://stackoverflow.com/questions/56678060/why-is-python-3-not-recognizing-colorama/56678374
        "colorama==0.4.6",
        "openai==1.55.3"
]
name = "ApiLogicServer"
authors = [
    {name = "Val Huber", email = "apilogicserver@gmail.com"},
]
dynamic = ["version"]
keywords = ["Flask", "SQLAlchemy", "Rules", "WebApp", "Microservice", "ReactAdmin", "Angular"]
requires-python = ">=3.10"
# zip_safe=False
# platforms="any"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers=[
"Development Status :: 5 - Production/Stable",
"Environment :: Web Environment",
"Intended Audience :: Developers",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.8",
"Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://www.genai-logic.com"
Docs = "https://apilogicserver.github.io/Docs/Doc-Home/"
Source = "https://github.com/ApiLogicServer/ApiLogicServer-src"
Issues = "https://github.com/ApiLogicServer/ApiLogicServer-src/issues"

# comment tmb
# define CLI entry points
[project.scripts]
ApiLogicServer = "api_logic_server_cli.cli:start"
als = "api_logic_server_cli.cli:start" 
gl = "api_logic_server_cli.cli:start" 
gal = "api_logic_server_cli.cli:start" 
gail = "api_logic_server_cli.cli:start" 
genai-logic = "api_logic_server_cli.cli:start"
